--- a/Diabetes_Prevention_Program_EDA.ipynb
+++ b/Diabetes_Prevention_Program_EDA.ipynb
@@ -5,7 +5,7 @@
    "id": "f4c6e0b1",
    "metadata": {},
    "source": [
-    "# Lark Health App Diabetes Prevention Program Insights\n",
+    "# Health App Diabetes Prevention Program Insights\n",
     "**Hong Tang**\n",
     "\n",
     "__EDA - Exploratory data analysis__\n",
@@ -1202,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ce5aa4a3",
+   "id": "1648914f",
    "metadata": {},
    "outputs": [
     {
